tests/parse_print/random_perturb/enum_liberated/delete-07/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/enum_liberated/delete-07/delete-07.essence:3:14:
unexpected tpe
expecting type
    given E1 new tpe enum
                 ^